# codex-desktop-linux

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.md  flake.nix  install.sh
.github/workflows/: ci.yml  upstream-build-app.yml
computer-use-linux/src/: atspi_tree.rs  diagnostics.rs  gnome_extension.rs  main.rs  remote_desktop.rs  screenshot.rs  server.rs  windows.rs
contrib/user-local-install/files/.local/lib/codex-desktop-linux/: common.sh
contrib/user-local-install/files/.local/share/applications/: codex-desktop.desktop
docs/: webview-server-evaluation.md
launcher/: start.sh.template
packaging/linux/: PKGBUILD.template  codex-desktop.desktop  codex-desktop.install  codex-desktop.spec  codex-packaged-runtime.sh  com.github.ilysenko.codex-desktop-linux.update.policy  control
plugins/openai-bundled/plugins/computer-use/.codex-plugin/: plugin.json
scripts/: build-deb.sh  install-deps.sh  patch-linux-window-ui.js  patch-linux-window-ui.test.js
scripts/lib/: asar-patch.sh  bundled-plugins.sh  dmg.sh  install-helpers.sh  linux-update-bridge-patch.js  native-modules.sh  node-runtime.sh  package-common.sh  patch-report.js  process-detection.sh  rebuild-report.sh  webview-install.sh
tests/: scripts_smoke.sh
tests/fixtures/: create-packaged-app-fixture.sh
updater/: Cargo.toml
updater/src/: app.rs  builder.rs  cli.rs  codex_cli.rs  config.rs  install.rs  install_rollback.rs  liveness.rs  main.rs  notify.rs  rollback.rs  state.rs  upstream.rs
