[package]
name = "codex-update-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
futures-util = "0.3"
notify-rust = "4.11"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
tempfile = "3.17"
wiremock = "0.6"
