[package]
name = "codex-update-manager"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["clock", "serde"] }
clap = { version = "4.6.0", features = ["derive"] }
directories = "5.0.1"
futures-util = "0.3.32"
notify-rust = "4.12.0"
reqwest = { version = "0.12.28", default-features = false, features = ["http2", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
toml = "0.8.23"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6.5"
